# fork-pytorch_resnet_cifar10

./: .gitignore  README.md  pyproject.toml
notebooks/: report.ipynb
notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
pytorch_trainer/: cifarnet.py  resnet.py  trainer.py  utils.py
